--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -26,6 +26,24 @@ body {
     border-color: transparent;
     max-width: 50%;
 }
+#about img{
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */    
+   -webkit-filter: grayscale(100%);
+   -moz-filter: grayscale(100%);
+   -ms-filter: grayscale(100%);
+   filter: grayscale(100%);
+   filter: gray; /* IE 6-9 */   
+}
+
+#about img:hover{
+   -webkit-filter: none;
+   -moz-filter: none;
+   -ms-filter: none;
+   filter: none;
+    width:362px;
+    height:362;
+}
+
 #menucontent {
     border: 2px solid;
     border-radius: 30px;
