little style + appcache changes
seems to work definently more stable now, also when i don't know, how
exact it takes with updates on srv.. i will see..

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -40,8 +40,8 @@ body {
    -moz-filter: none;
    -ms-filter: none;
    filter: none;
-    width:362px;
-    height:362;
+    width:260px;
+    height:260px;
 }
 
 #menucontent {
