--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,7 +1,14 @@
 body {
     margin: 0;
     padding: 0;
-    background: #151515 url("../images/bkg.png") 0 0;
+background: rgb(33,10,30);
+background: -moz-linear-gradient(left, rgba(33,10,30,1) 0%, rgba(40,71,19,1) 45%, rgba(20,28,6,1) 100%);
+background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(33,10,30,1)), color-stop(45%,rgba(40,71,19,1)), color-stop(100%,rgba(20,28,6,1)));
+background: -webkit-linear-gradient(left, rgba(33,10,30,1) 0%,rgba(40,71,19,1) 45%,rgba(20,28,6,1) 100%);
+background: -o-linear-gradient(left, rgba(33,10,30,1) 0%,rgba(40,71,19,1) 45%,rgba(20,28,6,1) 100%);
+background: -ms-linear-gradient(left, rgba(33,10,30,1) 0%,rgba(40,71,19,1) 45%,rgba(20,28,6,1) 100%);
+background: linear-gradient(to right, rgba(33,10,30,1) 0%,rgba(40,71,19,1) 45%,rgba(20,28,6,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#210a1e', endColorstr='#141c06',GradientType=1 );
     color: #eaeaea;
     font: 16px;
     line-height: 1.5;
@@ -26,24 +33,35 @@ body {
     border-color: transparent;
     max-width: 50%;
 }
-#about img{
-    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */    
-   -webkit-filter: grayscale(100%);
-   -moz-filter: grayscale(100%);
-   -ms-filter: grayscale(100%);
-   filter: grayscale(100%);
-   filter: gray; /* IE 6-9 */   
+#aboutImg {
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale");
+    /* Firefox 10+, Firefox on Android */
+    -webkit-filter: sepia(100%);
+    -moz-filter: sepia(100%);
+    -ms-filter: grayscale(100%);
+    filter: grayscale(100%);
+    filter: gray;
+    /* IE 6-9 */
+    width: 190px;
+    height: 190px;
+    transition-property: height;
+transition-duration: 0.6s;
+transition-timing-function: linear;
+transition-delay: 0.1s;
+    transition-property: width;
+transition-duration: 0.6s;
+transition-timing-function: linear;
+transition-delay: 0.1s;
+    
 }
-
-#about img:hover{
-   -webkit-filter: none;
-   -moz-filter: none;
-   -ms-filter: none;
-   filter: none;
-    width:260px;
-    height:260px;
+#aboutImg:hover {
+    -webkit-filter: none;
+    -moz-filter: none;
+    -ms-filter: none;
+    filter: none;
+    width: 240px;
+    height: 240px;
 }
-
 #menucontent {
     border: 2px solid;
     border-radius: 30px;
