--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,14 +1,14 @@
 body {
     margin: 0;
     padding: 0;
-background: rgb(33,10,30);
-background: -moz-linear-gradient(left, rgba(33,10,30,1) 0%, rgba(40,71,19,1) 45%, rgba(20,28,6,1) 100%);
-background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(33,10,30,1)), color-stop(45%,rgba(40,71,19,1)), color-stop(100%,rgba(20,28,6,1)));
-background: -webkit-linear-gradient(left, rgba(33,10,30,1) 0%,rgba(40,71,19,1) 45%,rgba(20,28,6,1) 100%);
-background: -o-linear-gradient(left, rgba(33,10,30,1) 0%,rgba(40,71,19,1) 45%,rgba(20,28,6,1) 100%);
-background: -ms-linear-gradient(left, rgba(33,10,30,1) 0%,rgba(40,71,19,1) 45%,rgba(20,28,6,1) 100%);
-background: linear-gradient(to right, rgba(33,10,30,1) 0%,rgba(40,71,19,1) 45%,rgba(20,28,6,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#210a1e', endColorstr='#141c06',GradientType=1 );
+    background: rgb(33, 10, 30);
+    background: -moz-linear-gradient(left, rgba(33, 10, 30, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(33, 10, 30, 1)), color-stop(45%, rgba(40, 71, 19, 1)), color-stop(100%, rgba(20, 28, 6, 1)));
+    background: -webkit-linear-gradient(left, rgba(33, 10, 30, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
+    background: -o-linear-gradient(left, rgba(33, 10, 30, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
+    background: -ms-linear-gradient(left, rgba(33, 10, 30, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
+    background: linear-gradient(to right, rgba(33, 10, 30, 1) 0%, rgba(40, 71, 19, 1) 45%, rgba(20, 28, 6, 1) 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#210a1e', endColorstr='#141c06', GradientType=1);
     color: #eaeaea;
     font: 16px;
     line-height: 1.5;
@@ -44,14 +44,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#210a1e', end
     /* IE 6-9 */
     width: 190px;
     height: 190px;
-    transition-property: height;
-transition-duration: 0.6s;
-transition-timing-function: linear;
-transition-delay: 0.1s;
-    transition-property: width;
-transition-duration: 0.6s;
-transition-timing-function: linear;
-transition-delay: 0.1s;
     
 }
 #aboutImg:hover {
@@ -59,8 +51,7 @@ transition-delay: 0.1s;
     -moz-filter: none;
     -ms-filter: none;
     filter: none;
-    width: 240px;
-    height: 240px;
+    cursor:pointer;
 }
 #menucontent {
     border: 2px solid;
