--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -42,16 +42,15 @@ body {
     filter: grayscale(100%);
     filter: gray;
     /* IE 6-9 */
-    width: 190px;
-    height: 190px;
-    
+    width: 213px;
+    height: 160px;
 }
 #aboutImg:hover {
     -webkit-filter: none;
     -moz-filter: none;
     -ms-filter: none;
     filter: none;
-    cursor:pointer;
+    cursor: pointer;
 }
 #menucontent {
     border: 2px solid;
@@ -218,9 +217,7 @@ hr {
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#5ceab92d', endColorstr='#26c79810', GradientType=1);
     padding: 8px 18px;
     border-radius: 50px;
-    border: 2px solid rgba(0, 0, 0, 0.7);
-    border-bottom: 2px solid rgba(0, 0, 0, 0.7);
-    border-top: 2px solid rgba(0, 0, 0, 1);
+    border: 2px solid transparent;
     color: rgba(255, 255, 255, 0.8);
     font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
@@ -237,6 +234,7 @@ hr {
     background: -ms-linear-gradient(-45deg, rgba(234, 185, 45, 0.36) 0%, rgba(176, 169, 40, 0.36) 6%, rgba(21, 127, 25, 0.67) 22%, rgba(11, 124, 24, 0.66) 23%, rgba(11, 124, 24, 0.5) 37%, rgba(11, 124, 24, 0.55) 43%, rgba(11, 124, 24, 1) 53%, rgba(11, 124, 24, 0.15) 100%);
     background: linear-gradient(135deg, rgba(234, 185, 45, 0.36) 0%, rgba(176, 169, 40, 0.36) 6%, rgba(21, 127, 25, 0.67) 22%, rgba(11, 124, 24, 0.66) 23%, rgba(11, 124, 24, 0.5) 37%, rgba(11, 124, 24, 0.55) 43%, rgba(11, 124, 24, 1) 53%, rgba(11, 124, 24, 0.15) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#5ceab92d', endColorstr='#260b7c18', GradientType=1);
+    border-color:green;
 }
 .btn .icon {
     display: inline-block;
