--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -22,10 +22,27 @@ body {
 #animationContainer {
     width: 100%;
 }
-
-#showContent,
 #menu {
-    width: 100%;
+    width: auto;
+    max-width: 60%;
+    margin-left: 20%;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 8px;
+    padding-bottom: 2px;
+    border: 2px solid;
+    border-radius: 30px;
+    border-color: transparent;
+    background: -moz-linear-gradient(-45deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(15%, rgba(39, 140, 0, 0.55)), color-stop(27%, rgba(33, 130, 0, 0.55)), color-stop(52%, rgba(20, 109, 0, 0.57)), color-stop(69%, rgba(179, 56, 41, 0.59)), color-stop(70%, rgba(188, 53, 43, 0.59)), color-stop(86%, rgba(0, 36, 0, 0.59)));
+    background: -webkit-linear-gradient(-45deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
+    background: -o-linear-gradient(-45deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
+    background: -ms-linear-gradient(-45deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
+    background: linear-gradient(135deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
+    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#8c278c00', endColorstr='#96002400', GradientType=1);
+}
+#showContent {
+    width: auto;
     /* max-width: 600px; 
   margin: 0 auto;  */
     padding-left: 25%;
@@ -56,19 +73,7 @@ body {
     filter: none;
     cursor: pointer;
 }
-#menucontent {
-    border: 2px solid;
-    border-radius: 30px;
-    border-color: transparent;
-    background: -moz-linear-gradient(-45deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
-    background: -webkit-gradient(linear, left top, right bottom, color-stop(15%, rgba(39, 140, 0, 0.55)), color-stop(27%, rgba(33, 130, 0, 0.55)), color-stop(52%, rgba(20, 109, 0, 0.57)), color-stop(69%, rgba(179, 56, 41, 0.59)), color-stop(70%, rgba(188, 53, 43, 0.59)), color-stop(86%, rgba(0, 36, 0, 0.59)));
-    background: -webkit-linear-gradient(-45deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
-    background: -o-linear-gradient(-45deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
-    background: -ms-linear-gradient(-45deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
-    background: linear-gradient(135deg, rgba(39, 140, 0, 0.55) 15%, rgba(33, 130, 0, 0.55) 27%, rgba(20, 109, 0, 0.57) 52%, rgba(179, 56, 41, 0.59) 69%, rgba(188, 53, 43, 0.59) 70%, rgba(0, 36, 0, 0.59) 86%);
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#8c278c00', endColorstr='#96002400', GradientType=1);
-}
-section {
+#menucontent {} section {
     display: block;
     margin: 0 0 20px 0;
 }
@@ -238,7 +243,7 @@ hr {
     background: -ms-linear-gradient(-45deg, rgba(234, 185, 45, 0.36) 0%, rgba(176, 169, 40, 0.36) 6%, rgba(21, 127, 25, 0.67) 22%, rgba(11, 124, 24, 0.66) 23%, rgba(11, 124, 24, 0.5) 37%, rgba(11, 124, 24, 0.55) 43%, rgba(11, 124, 24, 1) 53%, rgba(11, 124, 24, 0.15) 100%);
     background: linear-gradient(135deg, rgba(234, 185, 45, 0.36) 0%, rgba(176, 169, 40, 0.36) 6%, rgba(21, 127, 25, 0.67) 22%, rgba(11, 124, 24, 0.66) 23%, rgba(11, 124, 24, 0.5) 37%, rgba(11, 124, 24, 0.55) 43%, rgba(11, 124, 24, 1) 53%, rgba(11, 124, 24, 0.15) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#5ceab92d', endColorstr='#260b7c18', GradientType=1);
-    border-color:green;
+    border-color: green;
 }
 .btn .icon {
     display: inline-block;
