--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -99,7 +99,28 @@ transition-delay:2s;
   display: block;
   opacity: 1;
   visibility: visible;
+  animation: bounceit 6s;
+  transition: all 2s;
+  transition-delay: 2s;
   
+}
+
+@keyframes bounceit {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(.9);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .dropdowncontainer:before{
